templates/k8s-service-ingress-port-bind-reconciler/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $svcName
  labels:
    io.sharing.pair/managed: "true"
    io.sharing.pair/port: "${portNumber}"
    io.sharing.pair/pid: "$pid"
spec:
  externalIPs:
  - ${SHARINGIO_PAIR_LOAD_BALANCER_IP}
  ports:
  - name: $name
    port: ${portNumber}
    protocol: $protocol
    targetPort: $portNumber
  selector:
    app.kubernetes.io/name: humacs
  type: ClusterIP
