templates/k8s-service-ingress-port-bind-reconciler/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $svcName
  labels:
    io.sharing.pair/managed: "true"
    io.sharing.pair/port: "${portNumber}"
    io.sharing.pair/pid: "${pid}"
spec:
  rules:
    - host: ${hostName}
      http:
        paths:
          - backend:
              service:
                name: ${svcName}
                port:
                  number: ${portNumberExpose}
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - ${hostName}
      secretName: letsencrypt-prod
